--- a/Autopark/Autopark.csproj
+++ b/Autopark/Autopark.csproj
@@ -12,8 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Files\" />
-    <Folder Include="UnitTests\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
